[package]
name = "wsl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shaco = { git = "https://github.com/AlsoSylv/Shaco" }
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = ["full"] }