[package]
name = "wsl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = ["full"] }
sysinfo = "0.27.7"
regex = "1.0"
hyper-tls = "0.5.0"
hyper = { version = "0.14.23", features = ["full"]}
native-tls = "0.2.11"
tokio-native-tls = "0.3.0"