[package]
name = "wsl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
samira = { git = "https://github.com/AlsoSylv/samira.git" }
tokio = { version = "1.24.2", features = ["full"] }